@startuml

class App {
main()
start()
}

class ToDoList {
-Title : String
'Req 2
-Items : ArrayList
'Req 3

+setTitle()
'Req 6/8
+getTitle() : String
+getItem() : Item
'Req 14
+addItem()
'Req 9
+removeItem()
'Req 10
+editItem()
'Req 11/12
+markItemComplete()
'Req 13
+sortItemComplete() : ArrayList
'Req 16
+sortItemIncomplete() : ArrayList
'Req 15
+sortItemDate() : ArrayList
+exportList()
'Req 17
+loadList()
'Req 19
}

'open GUI here, Reqs 7, 18, and 20 here?
class ToDoController {
}

class Item {
-Description : String
'Req 4
-DueDate : String
'Req 5 "YYYY-MM-DD"
-Complete : Boolean

getDescription() : String
setDescription()
getDate() : String
setDate()
markComplete()
markIncomplete()
}

class FXMLController {
}

ToDoList "1 " *--- "many" Item
App -- ToDoController
ToDoController "1 " *-- "many" ToDoList

@enduml